zim: semplificazione schema url, fix URL di POST
Unica view per mostrare gli appuntamenti.

URL di POST non aveva senso, faceva salvare una giornata che non e' un oggetto
del database. Ora si salva un appuntamento con un POST ad /appointments/new

--- a/doc/apiedi/.zim/state.conf
+++ b/doc/apiedi/.zim/state.conf
@@ -1,7 +1,7 @@
 [History]
-pages={"Views:Calendario":[89,null],"Database":[161,null],"Views:Giorno":[92,null],"Schema degli URL":[230,null],"Views:calendario":[42,null],"Home":[45,null]}
-history=["Home","Schema degli URL","Home","Database","Schema degli URL","Home","Schema degli URL","Views:calendario","Schema degli URL","Views:Calendario","Database","Views:Calendario","Schema degli URL","Database"]
-current=13
+pages={"Views:Calendario":[89,null],"Schema degli URL":[128,null],"Views":[35,null],"Views:Giorno":[92,null],"Database":[161,null],"Views:Appointments":[330,null],"Views:calendario":[42,null],"Home":[45,null]}
+history=["Home","Database","Schema degli URL","Home","Schema degli URL","Views:calendario","Schema degli URL","Views:Calendario","Database","Views:Calendario","Schema degli URL","Database","Schema degli URL","Views:Calendario","Views:Giorno","Views","Views:Calendario","Database","Views","Views:Calendario","Views","Schema degli URL","Views:Appointments","Views","Views:Appointments"]
+current=24
 
 [MainWindow]
 windowsize=[1020,577]
